Prevent the search field from collapsing in height

--- a/client/components/site-selector/style.scss
+++ b/client/components/site-selector/style.scss
@@ -67,6 +67,7 @@
 
 .site-selector .search {
 	display: none;
+	flex: 0 0 auto;
 	margin-bottom: 0;
 	width: auto;
 	height: auto;
